css overflow correction

--- a/public/css/general-and-comicPanels.css
+++ b/public/css/general-and-comicPanels.css
@@ -33,6 +33,8 @@ body {
     background-color: rgb(199, 232, 239);
     margin: 0px;
     color: white;
+    overflow-x: hidden;
+    overflow-y: scroll;
     text-shadow: -1px -1px black, 1px 1px black, 2px 2px black;
 }
 
